// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query tests query "* | count()"; switch to whole space 1`] = `
Array [
  "count",
  "959",
]
`;

exports[`Query tests query "* | count()"; switch to whole space 2`] = `
Array [
  "count",
  "1,031,683",
]
`;

exports[`Query tests query "_path=http | count() by id.resp_p | sort" 1`] = `
Array [
  "id.resp_p",
  "count",
  "8080",
  "6",
  "80",
  "55",
]
`;

exports[`Query tests query "_path=http | count()" 1`] = `
Array [
  "count",
  "61",
]
`;

exports[`Query tests query "_path=http | every 5m count()" 1`] = `
Array [
  "ts",
  "count",
  "04/13/15",
  "09:30",
  "00.0000",
  "55",
  "04/13/15",
  "09:25",
  "00.0000",
  "2",
  "04/13/15",
  "09:10",
  "00.0000",
  "2",
  "04/13/15",
  "09:05",
  "00.0000",
  "2",
]
`;

exports[`Query tests query "_path=weird | sort" 1`] = `
Array [
  "ts",
  "_path",
  "uid",
  "id.orig_h",
  "id.orig_p",
  "id.resp_h",
  "id.resp_p",
  "name",
  "addl",
  "notice",
  "peer",
  "04/13/15",
  "09:31",
  "27.8210",
  "weird",
  "CbtgYm2YYGmfYsyaC4",
  "192.168.0.54",
  "53147",
  "216.58.209.134",
  "80",
  "inflate_failed",
  "-",
  "F",
  "bro",
  "04/13/15",
  "09:31",
  "51.9870",
  "weird",
  "-",
  "-",
  "-",
  "-",
  "-",
  "unknown_protocol_2",
  "-",
  "F",
  "bro",
  "04/13/15",
  "09:32",
  "45.1220",
  "weird",
  "Ctd0Gv1XC3Z0UV1iX",
  "192.168.0.53",
  "3682",
  "192.168.0.1",
  "8080",
  "unknown_HTTP_method",
  "UNSUBSCRIBE",
  "F",
  "bro",
  "04/13/15",
  "09:32",
  "45.1400",
  "weird",
  "CZehjU3zE0mxEXiC41",
  "192.168.0.53",
  "3683",
  "192.168.0.1",
  "8080",
  "unknown_HTTP_method",
  "UNSUBSCRIBE",
  "F",
  "bro",
]
`;
